# SysButler

./: .gitignore  CMakeLists.txt  LICENSE  vcpkg.json
src/: main.cpp
src/Core/: Logger.cpp  Logger.h  PlatformUtils.h
src/Jobs/: TransferManager.cpp  TransferManager.h
src/UI/: FileBrowser.cpp  FileBrowser.h
